--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,18 +3,34 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{'/css/bootstrap.min.css'}">
+    <link rel="stylesheet" th:href="@{'/css/global.css'}">
 </head>
 
 <body>
-    <form th:action="@{login/validate}" method="POST" th:object="${loginRequest}">
+    <div class="container h-100">
+        <header class="col-md-4 offset-md-4 my-5">
+            <h1>Logowanie</h1>
+        </header>
 
-        <label>Login</label><input type="text" name="login" th:field="*{login}">
-        <label>Password</label><input type="text" name="password" th:field="*{password}">
-        <button type="submit">submit</button>
-
-    </form>
+        <div class="row ">
+            <form th:action="@{validate} " method="POST" th:object="${loginRequest}">
+                <div class="alert-danger col-md-6 offset-md-3" th:if="${#fields.hasErrors('*')}">
+                    <ul>
+                        <li class="my-1 mx-2" th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
+                    </ul>
+                </div>
+                <label class="col-md-2 offset-md-3 my-2 ">Login</label><input class="col-md-4 " type="text " th:name="login">
+                <label class="col-md-2 offset-md-3 my-2 ">Password</label><input class="col-md-4 " type="password" th:name="password">
+                <button class="col-md-4 offset-md-4 my-3 btn btn-primary " type="submit ">submit</button>
+            </form>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 " crossorigin="anonymous "></script>
+    <script th:src="@{ '/js/bootstrap.min.js'} "></script>
 </body>
 
 </html>
