Started creating frontend

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 
-<head>
-    <meta charset="UTF-8">
+<head th:insert="fragments/header.html :: header(titleName='Login Page')">
+    <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Document</title>
     <link rel="stylesheet" th:href="@{'/css/bootstrap.min.css'}">
-    <link rel="stylesheet" th:href="@{'/css/global.css'}">
+    <link rel="stylesheet" th:href="@{'/css/global.css'}"> -->
 </head>
 
 <body>
