Changed login page, added info page

--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -14,7 +14,7 @@
 
     <header th:fragment="menuBar" id="header">
         <nav class="nav navbar-dark bg-dark navbar-light navbar-expand-md align-items-center ">
-            <a href="#" class="navbar-brand mx-4" th:href="@{'/testing/get'}"><b>Garrison Tracker</b></a>
+            <a href="#" class="navbar-brand mx-4" th:href="@{'/testing/infoPage'}"><b>Garrison Tracker</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Przełącznik nawigacji">
 				<span class="navbar-toggler-icon"></span>
 			</button>
