--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -1,10 +1,35 @@
 body {
     background-color: #22223B;
     color: #C9ADA7;
+    min-height: 100vh;
 }
 
 header nav {
     height: 8vh;
+}
+
+.error-list {
+    list-style-type: none;
+}
+
+.error-box {
+    background-color: rgba(248, 215, 218, 0.7);
+}
+
+input {
+    border: 1px solid #46494c;
+    color: #C9ADA7;
+    line-height: 1.5vmin!important;
+}
+
+.loginForm {
+    border: 1px solid #46494c;
+    background-color: #3d405b;
+    box-shadow: 0 0 1em #8d99ae;
+}
+
+input:focus {
+    outline: none;
 }
 
 h1 {
@@ -15,6 +40,14 @@ h1 {
     width: 15%;
 }
 
+.largeText {
+    font-size: 8vmin;
+}
+
+.mediumText {
+    font-size: 5vmin;
+}
+
 .lightColor {
     color: #C9ADA7!important;
 }
@@ -22,4 +55,17 @@ h1 {
 .menuLink:hover {
     color: #9d4edd!important;
     text-shadow: 0px 0px 2px #9A8C98;
+}
+
+footer {
+    height: 5vh;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill::first-line {
+    -webkit-text-fill-color: #C9ADA7;
+    -webkit-box-shadow: 0 0 0px 1000px #212529 inset;
+    border-radius: .25rem!important;
 }
