--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -16,20 +16,25 @@ header nav {
     background-color: rgba(248, 215, 218, 0.7);
 }
 
-input {
-    border: 1px solid #46494c;
-    color: #C9ADA7;
-    line-height: 1.5vmin!important;
+input,
+select {
+    border: 1px solid #46494c!important;
+    color: #C9ADA7 !important;
+    line-height: 1.5vmin;
 }
 
 .loginForm {
     border: 1px solid #46494c;
     background-color: #3d405b;
-    box-shadow: 0 0 1em #8d99ae;
+    box-shadow: 0 0 0.7em #8d99ae;
 }
 
 input:focus {
     outline: none;
+}
+
+label {
+    border-color: #C9ADA7!important;
 }
 
 h1 {
@@ -54,11 +59,12 @@ h1 {
 
 .menuLink:hover {
     color: #9d4edd!important;
-    text-shadow: 0px 0px 2px #9A8C98;
+    text-shadow: 0px 0px 1px #9A8C98;
 }
 
 footer {
     height: 5vh;
+    flex-shrink: 0;
 }
 
 input:-webkit-autofill,
@@ -68,4 +74,9 @@ input:-webkit-autofill::first-line {
     -webkit-text-fill-color: #C9ADA7;
     -webkit-box-shadow: 0 0 0px 1000px #212529 inset;
     border-radius: .25rem!important;
+}
+
+.font-large {
+    font-size: 2.5vmin;
+    ;
 }
