--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" href="#" th:href="@{'/css/global.css'}">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <title th:text="${titleName}"></title>
-    <script src="../../static/js/bootstrap.min.js" th:src="@{'/js/bootstrap.min.js'}"></script>
 </head>
 
 <body>
+
+
+    <div th:fragment="scripts">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 " crossorigin="anonymous "></script>
+        <script th:src="@{ '/js/bootstrap.min.js'} "></script>
+    </div>
 
 </body>
 
