--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -12,35 +12,40 @@
 
 <body>
 
-    <header th:fragment="menuBar" id="header">
-        <nav class="nav navbar-dark bg-dark navbar-light navbar-expand-md align-items-center ">
+    <nav th:fragment="menuBar" class="navbar navbar-dark bg-dark navbar-light navbar-expand-md align-items-center ">
+        <div class="container-fluid">
             <a href="#" class="navbar-brand mx-4" th:href="@{'/testing/infoPage'}"><b>Garrison Tracker</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Przełącznik nawigacji">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-            <div class="collapse navbar-collapse" id="collapsedMenu">
-                <ul class="nav navbar-nav flex-fill mx-4 py-2" id="menuBarButtonsGroup">
-                    <li class="nav-item text-center ">
-                        <a class="nav-link lightColor p-0 menuLink" href="#" th:href="@{'#'}">Track</a>
+				    <span class="navbar-toggler-icon"></span>
+			    </button>
+            <div class="collapse navbar-collapse ms-3" id="collapsedMenu">
+                <hr>
+                <ul class="navbar-nav flex-fill mr-auto justify-content-center flex-md-grow-1" id="menuBarButtonsGroup">
+                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'/testing/track'}">Track</a>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link lightColor p-0 menuLink" href="#" th:href="@{'#'}">Statistics</a>
+                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}">Statistics</a>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link lightColor p-0 menuLink" href="#" th:href="@{'#'}">Auction House</a>
+                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}">Auction House</a>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link lightColor p-0 menuLink" href="#" th:href="@{'#'}">About</a>
+                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+                        <a class="nav-link lightColor p-0 menuLink text-center fs-6 " href="#" th:href="@{'#'}">About</a>
                     </li>
-                    <li class="nav-item text-center">
-                        <a class="nav-link lightColor p-0 menuLink" href="#" th:href="@{'#'}">Contact</a>
+                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}">Contact</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav mx-3 py-2">
+                    <li class="nav-item text-center test flex-grow-1">
+                        <a th:href="@{'/testing/login/logout'}" class="btn btn-outline-secondary p-2 rounded ">Log out</a>
+                    </li>
+                </ul>
+                <hr>
             </div>
-        </nav>
-    </header>
-
-
+        </div>
+    </nav>
 
     <script src="../../static/js/bootstrap.min.js"></script>
 </body>
