--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,14 +15,14 @@
                     </ul>
                 </div>
                 <input placeholder="Login" class="col-6 offset-3 my-2 border-1 rounded text-center bg-dark fs-4" type="text " th:name="login"><br>
-                <input placeholder="Password" class="col-6 offset-3 my-2 border-1 rounded text-center bg-dark fs-4 " type="password" th:name="password">
-                <button class="col-md-4 offset-md-4 my-3 btn btn-primary " type="Submit ">Submit</button>
+                <input placeholder="Password" class="col-6 offset-3 my-2 border-1 rounded text-center bg-dark fs-4 " type="password" th:name="password"><br>
+                <button class="col-4 offset-4 my-3 btn btn-primary " type="Submit ">Submit</button>
             </form>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js " integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49 " crossorigin="anonymous "></script>
-    <script th:src="@{ '/js/bootstrap.min.js'} "></script>
+
+    <div th:insert="fragments/header.html :: scripts"></div>
+
 </body>
 
 </html>
