--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -6,7 +6,7 @@
 
 <body class="d-flex flex-column">
 
-    <div th:replace="fragments/menuBar.html :: menuBar">
+    <div th:replace="fragments/menuBar.html :: menuBar(active=1)">
     </div>
 
     <div class="container-fluid flex-grow-1">
