--- a/src/main/resources/templates/characters.html
+++ b/src/main/resources/templates/characters.html
@@ -11,7 +11,7 @@
 
     <div class="flex-grow-1 container-fluid">
 
-        <a class="btn btn-outline-secondary col-4 offset-4 my-5" th:href="@{/testing/characters/new}">Dodaj nową postać</a>
+        <a class="btn btn-outline-secondary col-4 offset-4 my-5" th:href="@{/testing/characters/new}">Add new Character</a>
 
         <hr>
 
