--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -31,7 +31,7 @@
                         <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}" th:style="${active == 3} ? 'color:green!important'">Statistics</a>
                     </li>
                     <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}" th:style="${active == 4} ? 'color:green!important'">Auction House</a>
+                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'/testing/auctionhouse/get'}" th:style="${active == 4} ? 'color:green!important'">Auction House</a>
                     </li>
                     <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
                         <a class="nav-link lightColor p-0 menuLink text-center fs-6 " href="#" th:href="@{'/testing/infoPage'}" th:style="${active == 5} ? 'color:green!important'">About</a>
