Track page now display character name instead of id

--- a/src/main/resources/templates/entryForm.html
+++ b/src/main/resources/templates/entryForm.html
@@ -34,12 +34,12 @@
 				<label class="form-label">Garrison Resources</label> <input
 					type="number" name="garrisonResources"
 					th:value="*{garrisonResources}"
-					class="mb-3 text-center form-control bg-dark lightColor "><br>
+					class="mb-3 text-center form-control bg-dark lightColor" required ><br>
 			</div>
 			<div>
 				<label class="form-label">War Paint</label> <input type="number"
 					name="warPaint" th:value="*{warPaint}"
-					class="mb-3 text-center form-control bg-dark lightColor "><br>
+					class="mb-3 text-center form-control bg-dark lightColor " required ><br>
 			</div>
 			<div>
 				<label class="form-label">Date</label> <input type="text"
