--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -2,6 +2,7 @@ body {
     background-color: #22223B;
     color: #C9ADA7!important;
     min-height: 100vh;
+    font-family: Mukta;
 }
 
 header nav {
