--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -2,55 +2,82 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" shrink-to-fit=no>
-    <title>Document</title>
-    <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../static/css/global.css">
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"
+	shrink-to-fit=no>
+<title>Document</title>
+<link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../static/css/global.css">
 </head>
 
 <body>
 
-    <nav th:fragment="menuBar(active)" class="navbar navbar-dark bg-dark navbar-light navbar-expand-md align-items-center ">
-        <div class="container-fluid">
-            <a href="#" class="navbar-brand mx-4" th:href="@{'/testing/infoPage'}"><b>Garrison Tracker</b></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsedMenu" aria-controls="collapsedMenu" aria-expanded="false" aria-label="Przełącznik nawigacji">
-				    <span class="navbar-toggler-icon"></span>
-			    </button>
-            <div class="collapse navbar-collapse ms-3 nav-pills" id="collapsedMenu">
-                <hr>
-                <ul class="navbar-nav flex-fill mr-auto justify-content-center flex-md-grow-1" id="menuBarButtonsGroup">
-                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center ">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'/testing/track'}" th:style="${active == 1} ? 'color:green!important'">Track</a>
-                    </li>
-                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'/testing/characters'}" th:style="${active == 2} ? 'color:green!important'">Characters</a>
-                    </li>
-                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}" th:style="${active == 3} ? 'color:green!important'">Statistics</a>
-                    </li>
-                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'/testing/auctionhouse/get'}" th:style="${active == 4} ? 'color:green!important'">Auction House</a>
-                    </li>
-                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6 " href="#" th:href="@{'/testing/infoPage'}" th:style="${active == 5} ? 'color:green!important'">About</a>
-                    </li>
-                    <li class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
-                        <a class="nav-link lightColor p-0 menuLink text-center fs-6" href="#" th:href="@{'#'}" th:style="${active == 6} ? 'color:green!important'">Contact</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav mx-3 py-2">
-                    <li class="nav-item text-center test flex-grow-1">
-                        <a th:href="@{'/testing/login/logout'}" class="btn btn-outline-secondary p-2 rounded ">Log out</a>
-                    </li>
-                </ul>
-                <hr>
-            </div>
-        </div>
-    </nav>
+	<nav th:fragment="menuBar(active)"
+		class="navbar navbar-dark bg-dark navbar-light navbar-expand-md align-items-center ">
+		<div class="container-fluid">
+			<a href="#" class="navbar-brand mx-4"
+				th:href="@{'/testing/infoPage'}"><b>Garrison Tracker</b></a>
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#collapsedMenu"
+				aria-controls="collapsedMenu" aria-expanded="false"
+				aria-label="Przełącznik nawigacji">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse ms-3 nav-pills"
+				id="collapsedMenu">
+				<hr>
+				<ul
+					class="navbar-nav flex-fill mr-auto justify-content-center flex-md-grow-1"
+					id="menuBarButtonsGroup">
+					<li
+						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center ">
+						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
+						href="#" th:href="@{'/testing/track'}"
+						th:style="${active == 1} ? 'color:green!important'">Track</a>
+					</li>
+					<li
+						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
+						href="#" th:href="@{'/testing/characters'}"
+						th:style="${active == 2} ? 'color:green!important'">Characters</a>
+					</li>
+					<li
+						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
+						href="#" th:href="@{'#'}"
+						th:style="${active == 3} ? 'color:green!important'">Statistics</a>
+					</li>
+					<li
+						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
+						href="#" th:href="@{'/testing/auctionhouse/get'}"
+						th:style="${active == 4} ? 'color:green!important'">Auction
+							House</a>
+					</li>
+					<li
+						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+						<a class="nav-link lightColor p-0 menuLink text-center fs-6 "
+						href="#" th:href="@{'/testing/infoPage'}"
+						th:style="${active == 5} ? 'color:green!important'">About</a>
+					</li>
+					<li
+						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
+						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
+						href="#" th:href="@{'#'}"
+						th:style="${active == 6} ? 'color:green!important'">Contact</a>
+					</li>
+				</ul>
+				<ul class="navbar-nav mx-3 py-2">
+					<li class="nav-item text-center test flex-grow-1"><a
+						th:href="@{'/testing/login/logout'}"
+						class="btn btn-outline-secondary p-2 rounded ">Log out</a></li>
+				</ul>
+				<hr>
+			</div>
+		</div>
+	</nav>
 
-    <script src="../../static/js/bootstrap.min.js"></script>
+	<script src="../../static/js/bootstrap.min.js"></script>
 </body>
 
 </html>
