--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 
-<head th:insert="fragments/header.html :: header(titleName='Tracking Page')">
+<head
+	th:insert="fragments/header.html :: header(titleName='Tracking Page')">
 </head>
 
 <body class="d-flex flex-column">
 
-    <div th:replace="fragments/menuBar.html :: menuBar(active=1)">
-    </div>
+	<div th:replace="fragments/menuBar.html :: menuBar(active=1)"></div>
 
-    <div class="container-fluid flex-grow-1">
+	<div class="container-fluid flex-grow-1 align-items-center">
 
-        <a href="#" th:href="@{/testing/track/newEntry}" class="btn btn-outline-secondary col-4 offset-4 my-5">Dodaj nowy wpis</a>
-        <hr>
+		<div class="row-fluid col-12 align-items-center my-5">
 
-        <table class="container-fluid col-lg-8 my-5">
-            <tr>
-                <th class="col-3 text-center font-large p-3 border-start border-bottom border-secondary">Data</th>
-                <th class="col-3 text-center font-large p-3 border-start border-bottom border-secondary">Id postaci</th>
-                <th class="col-3 text-center font-large p-3 border-start border-bottom border-secondary">War Paint</th>
-                <th class="col-3 text-center font-large p-3 border-start border-bottom border-secondary border-end">Garrison Resource</th>
-            </tr>
-            <tr th:each="entry : ${entries} " th:object="${entry}">
-                <td class="col-3 text-center p-3 border-start border-secondary" th:text="*{entryDate}"></td>
-                <td class="col-3 text-center p-3 border-start border-secondary" th:text="*{characterName}"></td>
-                <td class="col-3 text-center p-3 border-start border-secondary" th:text="*{warPaint}"></td>
-                <td class="col-3 text-center p-3 border-start border-secondary border-end" th:text="*{garrisonResources}"></td>
-            </tr>
+			<h2 class="text-center mx-auto">
+				List of all entries <a href="#" th:href="@{/testing/track/newEntry}"
+					class="btn btn-outline-secondary d-inline float-left col-3 "> <i
+					class="fas fa-plus"></i>
+				</a>
+			</h2>
+		</div>
+		<table
+			class="w-75 mx-auto col-lg-8 my-5 table table-striped table-default table-borderless border-bottom">
 
-        </table>
-    </div>
+			<tr class="border-bottom">
+				<th class="col-3 text-center font-large p-3">Data</th>
+				<th class="col-3 text-center font-large p-3">Id postaci</th>
+				<th class="col-3 text-center font-large p-3">War Paint</th>
+				<th class="col-3 text-center font-large p-3">Garrison Resource</th>
+			</tr>
 
-    <div th:replace="fragments/footer.html :: footer "></div>
-    <div th:replace="fragments/header.html :: scripts "></div>
+			<tr th:each="entry : ${entries} " th:object="${entry}">
+				<td class="col-3 text-center p-3" th:text="*{entryDate}"></td>
+				<td class="col-3 text-center p-3" th:text="*{characterName}"></td>
+				<td class="col-3 text-center p-3" th:text="*{warPaint}"></td>
+				<td class="col-3 text-center p-3" th:text="*{garrisonResources}"></td>
+			</tr>
+
+		</table>
+	</div>
+
+	<div th:replace="fragments/footer.html :: footer "></div>
+	<div th:replace="fragments/header.html :: scripts "></div>
+
 </body>
 
 </html>
