Some front end work

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 
-<head th:insert="fragments/header.html :: header(titleName='Login Page')">
+<head
+	th:insert="fragments/header.html :: header(titleName='Login Page')">
 </head>
 
 <body class="h-100 d-flex align-items-center container">
-    <div class=" row container rounded col-md-6 offset-md-3 p-0 loginForm">
-        <h1 class="col-12 my-4">Login</h1>
-        <div class="row-fluid ">
-            <form th:action="@{validate} " method="POST" th:object="${loginRequest}">
-                <div class="alert-danger rounded col-md-6 offset-md-3 error-box" th:if="${#fields.hasErrors('*')}">
-                    <ul class="p-2 m-2 error-list">
-                        <li class="my-1 mx-2 text-center" th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
-                    </ul>
-                </div>
-                <input placeholder="Login" class="col-6 offset-3 my-2 border-1 rounded text-center bg-dark fs-4" type="text " th:name="login"><br>
-                <input placeholder="Password" class="col-6 offset-3 my-2 border-1 rounded text-center bg-dark fs-4 " type="password" th:name="password"><br>
-                <button class="col-4 offset-4 my-3 btn btn-primary " type="Submit ">Submit</button>
-            </form>
-        </div>
-    </div>
+	<div
+		class=" row container rounded col-sm-10 offset-sm-1 col-lg-6 offset-lg-3 p-0 loginForm">
+		<h1 class="col-12 my-5">Login</h1>
+		<div class="row-fluid ">
+			<form th:action="@{validate} " method="POST"
+				th:object="${loginRequest}" class="container d-flex flex-column align-items-center">
+				<div
+					class="alert-danger  w-75 mx-auto error-box my-4"
+					th:if="${#fields.hasErrors('*')}">
+					<ul class="p-2 m-2 error-list">
+						<li class="my-1 mx-2 text-center"
+							th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
+					</ul>
+				</div>
+				<input placeholder="Login"
+					class="border-1 text-center border border-secondary fs-4 form-control w-75 mx-auto"
+					type="text " name="login" th:classappend="${#fields.hasErrors('*')}?is-invalid : ''">
 
-    <div th:insert="fragments/header.html :: scripts"></div>
+				<input placeholder="Password"
+					class="my-1 border-1 text-center my-2 border border-secondary  fs-4 form-control w-75 mx-auto"
+					type="password" name="password" th:classappend="${#fields.hasErrors('*')}?is-invalid : ''">
+
+				<button class="w-75 mx-auto mt-3 btn btn-primary " type="Submit ">Submit</button>
+				<a class="btn btn-secondary w-75 mb-5 mt-2" 
+					th:href="@{/account/register/page/}">Create new Account</a>
+			</form>
+		</div>
+	</div>
+
+	<div th:insert="fragments/header.html :: scripts"></div>
 
 </body>
 
