--- a/src/main/resources/static/css/global.css
+++ b/src/main/resources/static/css/global.css
@@ -1,106 +1,93 @@
 body {
-    background-color: #22223B;
-    color: #C9ADA7!important;
-    min-height: 100vh;
-    font-family: Mukta;
+	background-color: #22223B;
+	color: #C9ADA7 !important;
+	min-height: 100vh;
+	font-family: Mukta;
 }
 
 header nav {
-    height: 8vh;
+	height: 8vh;
 }
 
 .error-list {
-    list-style-type: none;
+	list-style-type: none;
 }
 
 .error-box {
-    background-color: rgba(248, 215, 218, 0.7);
+	background-color: rgba(248, 215, 218, 0.7);
 }
 
-input,
-select {
-    border: 1px solid #46494c!important;
-    color: #C9ADA7 !important;
-    line-height: 1.5vmin;
+select{
+	color: rgba(255,255,255,1);
+}
+
+input, select {
+	border: 1px solid #46494c !important;
+	line-height: 1.5vmin;
+	background-color: rgba(255, 255, 255, 0.5) !important;
 }
 
 .loginForm {
-    border: 1px solid #46494c;
-    background-color: #3d405b;
-    box-shadow: 0 0 0.7em #8d99ae;
+	border: 1px solid #46494c;
+	background-color: #3d405b;
+	box-shadow: 0 0 0.7em #8d99ae;
 }
 
 input:focus {
-    outline: none;
+	outline: none;
 }
 
 label {
-    border-color: #C9ADA7!important;
+	border-color: #C9ADA7 !important;
 }
 
 h1 {
-    text-align: center;
+	text-align: center;
 }
 
 #menuBarButtonsGroup li {
-    width: 15%;
+	width: 15%;
 }
 
 .largeText {
-    font-size: 8vmin;
+	font-size: 8vmin;
 }
 
 .mediumText {
-    font-size: 5vmin;
+	font-size: 5vmin;
 }
 
 .lightColor {
-    color: #C9ADA7!important;
+	color: #C9ADA7 !important;
 }
 
 .menuLink:hover {
-    color: #9d4edd!important;
-    text-shadow: 0px 0px 1px #9A8C98;
+	color: #9d4edd !important;
+	text-shadow: 0px 0px 1px #9A8C98;
 }
 
 footer {
-    height: 5vh;
-    flex-shrink: 0;
+	height: 5vh;
+	flex-shrink: 0;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill::first-line {
-    -webkit-text-fill-color: #C9ADA7;
-    -webkit-box-shadow: 0 0 0px 1000px #212529 inset;
-    border-radius: .25rem!important;
+input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus,
+	input:-webkit-autofill::first-line {
+   -webkit-transition:color 9999s ease-out, background-color 9999s ease-out;
+    -webkit-transition-delay: 9999s;
 }
 
 .font-large {
-    font-size: 2.5vmin;
-    ;
+	font-size: 2.5vmin;
+	;
 }
 
-.table{
-	color:#C9ADA7;
+.table {
+	color: #C9ADA7;
 }
 
-.table-striped>tbody>tr:nth-child(odd)>td, 
-.table-striped>tbody>tr:nth-child(odd)>th {
-   background-color: #202038;
-   color:#C9ADA7;
- }
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
+.table-striped>tbody>tr:nth-child(odd)>td, .table-striped>tbody>tr:nth-child(odd)>th
+	{
+	background-color: #202038;
+	color: #C9ADA7;
+}
