--- a/src/main/resources/templates/characterForm.html
+++ b/src/main/resources/templates/characterForm.html
@@ -18,17 +18,20 @@
 			class="align-middle my-5 p-5 container-fluid loginForm col-6 offset-3">
 
 			<h2 class="text-center fs-1">Add new Character</h2>
-			
-			<div th:if="${#fields.hasErrors('*')}" class="alert-danger rounded error-box mt-5">
-				<ul class="p-2 my-2 error-list">
-					<li class="my-1 mx-2 text-center" th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
+
+
+			<input type="text" placeholder="Character name" name="characterName"
+				class="text-center font-large mt-5 form-control  " th:classappend="${#fields.hasErrors('characterName')} ? is-invalid : ''">
+			<div class="invalid-feedback"
+				th:if="${#fields.hasErrors('characterName')}">
+				<ul class="p-0 error-list">
+					<li class=" mx-2 text-center"
+						th:each="err : ${#fields.errors('characterName')}"
+						th:text="${err}"></li>
 				</ul>
 			</div>
-			
-			<input type="text" placeholder="Character name" name="characterName"
-				class="text-center font-large my-5 form-control lightColor bg-dark">
 			<button type="submit"
-				class="btn btn-secondary offset-4 col-4 text-center">Submit</button>
+				class="btn btn-secondary offset-4 col-4 mt-4 text-center">Submit</button>
 
 		</form>
 	</div>
