--- a/src/main/resources/templates/entryForm.html
+++ b/src/main/resources/templates/entryForm.html
@@ -15,37 +15,53 @@
 		<div
 			class="row-fluid col-sm-8 offset-sm-2 col-lg-4 offset-lg-4 d-flex flex-column loginForm p-5">
 			<h2 class="text-center fs-1 mb-5">New Entry</h2>
-			<div th:if="${#fields.hasErrors('*')}" class="alert-danger rounded error-box mt-5">
-				<ul class="p-2 my-2 error-list">
-					<li class="my-1 mx-2 text-center" th:each="err : ${#fields.errors('*')}" th:text="${err}"></li>
-				</ul>
+			<div class="form-group">
+				<label class="form-label m-0">Account Character</label>
+				<div class="input-group">
+					<select name="accountCharacterId" th:field="*{accountCharacterId}"
+						class="mb-1 text-center form-select custom-select">
+						<option class="text-center  " th:each="character : ${characters}"
+							th:text="${character.getCharacterName()}"
+							th:value="${character.getId()}"></option>
+					</select>
+				</div>
 			</div>
-			<div>
-				<label class="form-label">Account Character</label> <select
-					name="accountCharacterId" th:field="*{accountCharacterId}"
-					class="mb-3 text-center form-control bg-dark lightColor ">
-					<option class="text-center bg-dark lightColor"
-						th:each="character : ${characters}"
-						th:text="${character.getCharacterName()}"
-						th:value="${character.getId()}"></option>
-				</select><br>
-			</div>
-			<div>
-				<label class="form-label">Garrison Resources</label> <input
+
+			<div class="form-group mt-2">
+				<label class="form-label m-0">Garrison Resources</label> <input
 					type="number" name="garrisonResources"
-					th:value="*{garrisonResources}"
-					class="mb-3 text-center form-control bg-dark lightColor" required ><br>
+					th:value="*{garrisonResources}" class="text-center form-control"
+					required
+					th:classappend="${#fields.hasErrors('garrisonResources')} ? is-invalid : ''">
+				<div class="invalid-feedback"
+					th:if="${#fields.hasErrors('garrisonResources')}">
+					<ul class="p-0 error-list">
+						<li class=" mx-2 text-center"
+							th:each="err : ${#fields.errors('garrisonResources')}"
+							th:text="${err}"></li>
+					</ul>
+				</div>
 			</div>
-			<div>
-				<label class="form-label">War Paint</label> <input type="number"
+
+			<div class="form-group mt-2">
+				<label class="form-label m-0">War Paint</label> <input type="number"
 					name="warPaint" th:value="*{warPaint}"
-					class="mb-3 text-center form-control bg-dark lightColor " required ><br>
+					class="text-center form-control   " required
+					th:classappend="${#fields.hasErrors('warPaint')} ? is-invalid : ''">
+				<div class="invalid-feedback text-center mx-auto "
+					th:if="${#fields.hasErrors('warPaint')}">
+					<ul class="  p-0 error-list">
+						<li class=" mx-2 text-center"
+							th:each="err : ${#fields.errors('warPaint')}" th:text="${err}"></li>
+					</ul>
+				</div>
 			</div>
-			<div>
-				<label class="form-label">Date</label> <input type="text"
+
+			<div class="form-group mt-2">
+				<label class="form-label m-0">Date</label> <input type="text"
 					name="entrydate" th:value="*{entryDate}" disabled
-					class="mb-3 text-center form-control disabled bg-dark lightColor border-1"
-					style="opacity:0.7;"><br>
+					class="mb-3 text-center form-control disabled   border-1"
+					style="opacity: 0.7;"><br>
 			</div>
 			<button type="submit" class="offset-4 col-4 btn btn-secondary">Submit</button>
 		</div>
