--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -44,7 +44,7 @@
 					<li
 						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
 						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
-						href="#" th:href="@{'#'}"
+						href="#" th:href="@{'/statistics'}"
 						th:style="${active == 3} ? 'color:green!important'">Statistics</a>
 					</li>
 					<li
@@ -63,7 +63,7 @@
 					<li
 						class="nav-item flex-md-grow-0 mx-auto my-2 d-flex justify-content-center align-items-center">
 						<a class="nav-link lightColor p-0 menuLink text-center fs-6"
-						href="#" th:href="@{'#'}"
+						href="#" th:href="@{'/testing/contact'}"
 						th:style="${active == 6} ? 'color:green!important'">Contact</a>
 					</li>
 				</ul>
