--- a/src/main/resources/templates/statistics.html
+++ b/src/main/resources/templates/statistics.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="fragments/header.html :: head(titleName='Statistics')">
 </head>
+
 <body class="d-flex flex-column">
 
-<div th:replace="fragments/menuBar.html :: menuBar(active=3)"></div>
-<div class="container-fluid flex-grow-1 d-flex flex-column my-5">
-	
-	<div class="row col-lg-6 offset-lg-3 col-10 offset-1 loginForm align-middle">
-		<table class="w-75 mx-auto">
-		<tr>
-			<td class="pt-3 px-3">All garrison resources: </td>
-			<td class="pt-3 px-3" th:text="${account.garrisonResources}"></td>
-		</tr>	
-		<tr>
-			<td class="pt-3 px-3">All war paint: </td>
-			<td class="pt-3 px-3" th:text="${account.warPaint}"></td>
-		</tr>	
-		<tr>
-			<td class="pt-3 px-3 pb-3">Entries: </td>
-			<td class="pt-3 px-3 pb-3" th:text="${account.amountOfEntries}"></td>
-		</tr>	
-		</table>
-	</div>
-
-</div>
+    <div th:replace="fragments/menuBar.html :: menuBar(active=3)"></div>
+    <div class="container-fluid flex-grow-1 d-flex flex-column my-5">
 
 
-<div th:insert="fragments/footer.html :: footer"></div>
-<div th:replace="fragments/header.html :: scripts"></div>
+        <div class="row col-lg-6 offset-lg-3 col-10 offset-1 loginForm align-middle p-5">
+            <h2 class="text-center mb-5 fs-2">Statistics</h2>
+            <div class="col-10  offset-1 mx-auto d-flex flex-column">
+                <label class="pt-3 px-3 text-center">Total Garrison Resources:<br> <span class="text-right fs-3"
+						th:text="${account.garrisonResources}"></span></label>
+                <hr>
+                <label class="pt-3 px-3 text-center">Total
+					War Paint: <br><span class="fs-3" th:text="${account.warPaint}"></span></label>
+
+                <hr>
+                <label class="pt-3 px-3 text-center">Average War Paint per day: <br><span class="fs-3" th:text="${account.averageWPPerDay}"></span></label>
+                <hr>
+                <label class="pt-3 px-3 text-center">Average Garrison Resources Per Day: <br> <span class="fs-3" th:text="${account.averageGRPerDay}"></span></label>
+                <hr>
+                <label class="pt-3 px-3 text-center">Entries: <br><span class="fs-3" th:text="${account.amountOfEntries}"></span></label>
+                <hr>
+                <label class="pt-3 px-3 text-center">You used this app for : <br> <span class="fs-3" th:text="${account.days}"></span> days</label>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div th:insert="fragments/footer.html :: footer"></div>
+    <div th:replace="fragments/header.html :: scripts"></div>
 </body>
+
 </html>
