Even more refactoring...

--- a/src/main/resources/templates/fragments/menuBar.html
+++ b/src/main/resources/templates/fragments/menuBar.html
@@ -41,7 +41,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav mx-3 py-2">
-                    <li class="nav-item text-center test flex-grow-1"><a th:href="@{'/login/logout'}" class="btn btn-outline-secondary p-2 rounded ">Log out</a></li>
+                    <li class="nav-item text-center test flex-grow-1"><a th:href="@{'/account/login/logout'}" class="btn btn-outline-secondary p-2 rounded ">Log out</a></li>
                 </ul>
                 <hr>
             </div>
